feat: getchar, putchar로 문자열 핸들링 하기

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,8 @@
     "stdint.h": "c",
     "stdio.h": "c",
     "complex.h": "c",
-    "limits.h": "c"
+    "limits.h": "c",
+    "cstdio": "c"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
