--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,9 @@
     "stdio.h": "c",
     "complex.h": "c",
     "limits.h": "c",
-    "cstdio": "c"
+    "cstdio": "c",
+    "ctype.h": "c",
+    "_ctype.h": "c"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
